# OP_C_Libraries

./: CMakeLists.txt  main.c
apps/: CMakeLists.txt
apps/lab20_09/: CMakeLists.txt  file_test9.txt  main9.c
apps/lab20_10/: CMakeLists.txt  main10.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/array_set/: ordered_array_set.c  ordered_array_set.h  unordered_array_set.c  unordered_array_set.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/file_io/: CMakeLists.txt  file_io.c  file_io.h  file_io_test.c  file_io_test.h
libs/string/: CMakeLists.txt  string_test.c  string_test.h
libs/string/tasks/: string_.c  string_.h
libs/thread_io/: CMakeLists.txt  thread_io.c  thread_io.h  thread_io_test.c  thread_io_test.h
