add_library(data_structures
        bitset/bitset.c
        array_set/unordered_array_set.c
        array_set/ordered_array_set.c
        array_set/ordered_array_set.h
        vector/vector.h
        vector/vector.c
        vector/vectorVoid.c
        vector/vectorVoid.h
        matrix/matrix.h
        matrix/matrix.c
)